update README.md file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="js/scripts.js"></script>
-  <title>template</title>
+  <title>Pizza Parlor</title>
 </head>
 </html>
