add html logic to index file that allows users to select size, types of meat toppings and vegetable toppings

--- a/index.html
+++ b/index.html
@@ -5,4 +5,95 @@
   <script src="js/scripts.js"></script>
   <title>Pizza Parlor</title>
 </head>
+<body>
+  <h1>Welcome to Analog's Pizza Parlor</h1>
+  <h2>What would you like?</h2>
+  <div>
+    <form id="user-pizza-size">
+      <p>What size of pizza would you like?</p>
+      <select id="pizza-size-id">
+        <option value="Small">Small, $3</option>
+        <option value="Medium">Medium, $5</option>
+        <option value="Large">Large, $7</option>
+      </select>
+    </form>
+    <br>
+    <br>
+
+    <form id="user-meat-topping">
+      <p>What kinds of meat toppings would you like? $3 each.</p>
+      <select id="meat-toppings">
+        <option value=></option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Bacon">Bacon</option>
+        <option value="BBQ Chicken">BBQ Chicken</option>
+      </select> <br>
+
+      <select id="meat-toppings">
+        <option value=></option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Bacon">Bacon</option>
+        <option value="BBQ Chicken">BBQ Chicken</option>
+      </select> <br>
+
+      <select id="meat-toppings">
+        <option value=></option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Bacon">Bacon</option>
+        <option value="BBQ Chicken">BBQ Chicken</option>
+      </select> <br>
+
+      <select id="meat-toppings">
+        <option value=></option>
+        <option value="Pepperoni">Pepperoni</option>
+        <option value="Sausage">Sausage</option>
+        <option value="Bacon">Bacon</option>
+        <option value="BBQ Chicken">BBQ Chicken</option>
+      </select> <br>
+
+    </form>
+
+    <form id="user-vegetable-toppings">
+      <p>What kinds of vegetable toppings would you like? $2 each.</p>
+      <select id="pizza-size-id">
+        <option value=""></option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Bellpeppers">Bellpeppers</option>
+        <option value="Artichokes">Artichokes</option>
+        <option value="Olives">Olives</option>
+      </select> <br>
+
+      <select id="pizza-size-id">
+        <option value=""></option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Bellpeppers">Bellpeppers</option>
+        <option value="Artichokes">Artichokes</option>
+        <option value="Olives">Olives</option>
+      </select> <br>
+
+      <select id="pizza-size-id">
+        <option value=""></option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Bellpeppers">Bellpeppers</option>
+        <option value="Artichokes">Artichokes</option>
+        <option value="Olives">Olives</option>
+      </select> <br>
+
+      <select id="pizza-size-id">
+        <option value=""></option>
+        <option value="Mushrooms">Mushrooms</option>
+        <option value="Bellpeppers">Bellpeppers</option>
+        <option value="Artichokes">Artichokes</option>
+        <option value="Olives">Olives</option>
+      </select> <br>
+
+    </form>
+
+
+  </div>
+</body>
+
 </html>
