add submit button, add event listener for submit button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <option value="Olives">Olives</option>
       </select> <br>
 
+      <button type="submit">Add Pizza To Cart</button>
     </form>
 
     <h2>Your Pizza's</h2>
