add js logic to handle multiple choices of toppings WIP

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <form id="user-meat-topping">
       <p>What kinds of meat toppings would you like? $3 each.</p>
-      <select id="meat-toppings">
+      <select id="meat-toppings-id1">
         <option value=></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
@@ -30,7 +30,7 @@
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings">
+      <select id="meat-toppings-id2">
         <option value=></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
@@ -38,7 +38,7 @@
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings">
+      <select id="meat-toppings-id3">
         <option value=></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
@@ -46,7 +46,7 @@
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings">
+      <select id="meat-toppings-id4">
         <option value=></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
@@ -58,7 +58,7 @@
 
     <form id="user-vegetable-toppings">
       <p>What kinds of vegetable toppings would you like? $2 each.</p>
-      <select id="pizza-size-id">
+      <select id="veggetables-id1">
         <option value=""></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
@@ -66,7 +66,7 @@
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="pizza-size-id">
+      <select id="veggetables-id2">
         <option value=""></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
@@ -74,7 +74,7 @@
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="pizza-size-id">
+      <select id="veggetables-id3">
         <option value=""></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
@@ -82,7 +82,7 @@
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="pizza-size-id">
+      <select id="veggetables-id4">
         <option value=""></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
