add js logic to add new pizza's after they are created

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
 
     <form id="user-meat-topping">
       <p>What kinds of meat toppings would you like? $3 each.</p>
-      <select id="meat-toppings-id1">
-        <option value=></option>
+      <select class="meat-toppings">
+        <option value="null"></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
         <option value="Bacon">Bacon</option>
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings-id2">
-        <option value=></option>
+      <select class="meat-toppings">
+        <option value="null"></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
         <option value="Bacon">Bacon</option>
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings-id3">
-        <option value=></option>
+      <select class="meat-toppings">
+        <option value="null"></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
         <option value="Bacon">Bacon</option>
         <option value="BBQ Chicken">BBQ Chicken</option>
       </select> <br>
 
-      <select id="meat-toppings-id4">
-        <option value=></option>
+      <select class="meat-toppings">
+        <option value="null"></option>
         <option value="Pepperoni">Pepperoni</option>
         <option value="Sausage">Sausage</option>
         <option value="Bacon">Bacon</option>
@@ -58,32 +58,32 @@
 
     <form id="user-vegetable-toppings">
       <p>What kinds of vegetable toppings would you like? $2 each.</p>
-      <select id="veggetables-id1">
-        <option value=""></option>
+      <select class="vegetable-toppings">
+        <option value="null"></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
         <option value="Artichokes">Artichokes</option>
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="veggetables-id2">
-        <option value=""></option>
+      <select class="vegetable-toppings">
+        <option value="null"></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
         <option value="Artichokes">Artichokes</option>
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="veggetables-id3">
-        <option value=""></option>
+      <select class="vegetable-toppings">
+        <option value="null"></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
         <option value="Artichokes">Artichokes</option>
         <option value="Olives">Olives</option>
       </select> <br>
 
-      <select id="veggetables-id4">
-        <option value=""></option>
+      <select class="vegetable-toppings">
+        <option value="null"></option>
         <option value="Mushrooms">Mushrooms</option>
         <option value="Bellpeppers">Bellpeppers</option>
         <option value="Artichokes">Artichokes</option>
