add js logic that allows users to click their pizzas and have the details show up

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <p>Meat Toppings : <span class="meats"></span>.</p>
       <p>Vegetables : <span class="vegetables"></span>.</p>
       <p>Price : <span class="price"></span>.</p>
+      <button class="delete" type="button">Remove From Cart?</button>
 
     </div>
 
